feat: add orgnote client meta service for getting release info
