# app/models/client_update_info.go
@@ -1,0 +1,7 @@
+package models
+
+type OrgNoteClientUpdateInfo struct {
+	Version   string `json:"version"`
+	ChangeLog string `json:"changeLog"`
+	Url       string `json:"url"`
+}
